refactor htmlstructure and design elms for integration with backbone / _underscore

--- a/tool-bar/index.html
+++ b/tool-bar/index.html
@@ -333,6 +333,7 @@ h2 {
       </div>
     </div>
     <div class='content'></div>
+    <iframe src="file:///Users/slowreader/UI/MKS/gets_n_puts/chat-box/index.html" height = "500px"></iframe>
   </div>
 </div>
 
