--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@ ul {
 #sidebar {
   position: absolute;
   width: 260px;
-  max-height: 100%;
+  height: 100%;
   color: #fff;
 }
 
 #sidebar ul li a {
   display: block;
-  padding: 15px 20px;
-  font-size: 14px;
+  padding: 13px 20px;
+  font-size: 15px;
   border-bottom: 1px solid rgba(0,0,0,.3);
 }
 
@@ -285,10 +285,8 @@ h2 {
       <li>
         <a>Manage Groups</a>
       </li>
-      <hr>
     </ul>
     <ul id='utility-nav'>
-      <hr>
       <li id='button-lg'>
         <a>Forums</a>
       </li>
