performance fix hammer.js  (minify put on S3)

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ h2 {
   <script type="text/javascript" src="js/views/ToolBarUsersView.js"></script>
   <script type="text/javascript" src="js/views/UserView.js"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.10/fastclick.min.js'></script>
-<script src='http://eightmedia.github.io/hammer.js/dist/jquery.hammer.js'></script>
+<script src='http://site-marketing-images.s3.amazonaws.com/2013/odinproject/assets/hammer.min.js'></script>
 <div class="container">
 <div class='wrapper'>
   <div class='scrolling' id='sidebar'>
