--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ h2 {
   <script type="text/javascript" src="js/views/ToolBarUsersView.js"></script>
   <script type="text/javascript" src="js/views/UserView.js"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/fastclick/0.6.10/fastclick.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/jquery.hammer.min.js'></script>
 <div class="container">
 <div class='wrapper'>
   <div class='scrolling' id='sidebar'>
