try again fix containers for chat

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ h2 {
         <div id='settings'></div>
       </div>
     </div>
-    <div class='content'></div>
+    <div class='content'><div class='convowrap'></div></div>
   </div>
 </div>
 </div>
