--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ ul {
 
 #swipe {
   flex: 1;
-  background: #eee;
+  background: #d8dbde;
   box-shadow: 0 0 10px rgba(0,0,0,1);
   transform: translate3d(0,0,0);
   transition: transform .1s linear;
@@ -243,6 +243,21 @@ h2 {
   position:absolute;
   bottom:0;
 }
+/*conversation area*/
+.convowrap{
+    height: 310px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .inner-wrap{
+    position: relative;
+    float: right;
+    height: 310px;
+    width: 280px;
+  }
 
 </style>
 
