--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@ h2 {
 }
 /*conversation area*/
 .convowrap{
+    overflow: hidden;
     height: 310px;
     width: 100%;
     position: absolute;
