convo wrapper adjuct for sidebar position

--- a/index.html
+++ b/index.html
@@ -247,11 +247,10 @@ h2 {
 .convowrap{
     overflow: hidden;
     height: 310px;
-    width: 100%;
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
+    left: 50px;
+    right: 15px;
   }
   .inner-wrap{
     position: relative;
@@ -261,6 +260,7 @@ h2 {
   }
 
 </style>
+
 
 </head>
 
@@ -336,6 +336,7 @@ h2 {
 </div>
 
   <script src="js/index.js"></script>
+
 
 </body>
 
