--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ ul {
 
 #sidebar {
   position: absolute;
-  width: 260px;
+  width: 158px;
   height: 100%;
   color: #fff;
 }
@@ -69,7 +69,7 @@ ul {
 }
 
 #swipe.isOpen {
-  transform: translate3d(260px,0,0);
+  transform: translate3d(158px,0,0);
 }
 
 .content {
@@ -81,7 +81,6 @@ ul {
   width: 50px;
   height: 100%;
   background:#999;
-  border-right: 1px solid red;
 }
 
 h1 {
@@ -250,11 +249,10 @@ h2 {
     position: absolute;
     bottom: 0;
     left: 50px;
-    right: 15px;
   }
   .inner-wrap{
     position: relative;
-    float: right;
+    float: left;
     height: 360px;
     width: 280px;
   }
