--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>Tool Bar</title>
+  <title>MS Chat App</title>
 
     <style>
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
