--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@ h2 {
 }
 
 #sm-chat-nav ul li img{
-  border: 1px solid black;
+  border: 2px solid #51b85b;
+  border-radius: 50%;
+  margin-left: 5px !important;
 }
 #sm-chat-nav ul li a span{
  content:url('http://site-marketing-images.s3.amazonaws.com/2013/odinproject/img/grn.png');
