adjust scroll sm0chat-nav

--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@ h2 {
 }
 
 #sm-chat-nav ul{
+
   position: relative;
-  padding:5px 0;
-  top: 210px;
+  padding:210px 0 81px 0;
   min-height:200px;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
@@ -322,7 +322,6 @@ h2 {
       </div>
       <div id='sm-chat-nav'>
         <ul>
-
         </ul>
       </div>
       <div id='sm-util-nav'>
