--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ul {
 
 #sidebar ul li a {
   display: block;
-  padding: 13px 20px;
+  padding: 12px 20px;
   font-size: 15px;
   border-bottom: 1px solid rgba(0,0,0,.3);
 }
@@ -107,12 +107,22 @@ h2 {
 }
 
 /* stuff*/
+#main-nav-titles{
+ margin-top: 10px; 
+}
 
 #swipeme {
   height: 100%;
   background: #333;
 }
 /*small utility nav*/
+#utility-nav{
+  border-top: 1px solid rgba(0,0,0,.3);
+}
+#utility-nav ul li{
+  padding-top:2px;
+}
+
 #swipeme #button {
   display: block;
   width: 50px;
@@ -145,6 +155,8 @@ h2 {
   z-index:1;
   position:absolute;
   top:0;
+}
+
 }
 #swipeme #sm-chat-nav{
   z-index:2;
@@ -201,7 +213,7 @@ h2 {
   height: 40px;
   margin: 0 20px 0 0;
   text-align: center;
-  border-bottom:1px solid #000;
+  border-bottom:1px solid rgba(0,0,0,.3);
 }
 #swipeme #groups:before {
   content:"\f0c0";
@@ -238,7 +250,7 @@ h2 {
 
 }
 #sm-util-nav{
-  border-top:1px solid #000;
+  border-top:1px solid rgba(0,0,0,.3);
   background:#333;
   width:50px;
   position:absolute;
@@ -287,7 +299,7 @@ h2 {
 <div class="container">
 <div class='wrapper'>
   <div class='scrolling' id='sidebar'>
-    <ul>
+    <ul id="main-nav-titles">
       <li>
         <a>logo</a>
       </li>
