color MKS logo blue

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ h2 {
 }
 
 /* stuff*/
+#logo-text a{
+  color:#1189d9;
+}
 #main-nav-titles{
  margin-top: 10px; 
 }
@@ -300,8 +303,8 @@ h2 {
 <div class='wrapper'>
   <div class='scrolling' id='sidebar'>
     <ul id="main-nav-titles">
-      <li>
-        <a>logo</a>
+      <li id="logo-text">
+        <a><strong>MAKER</strong>SQUARE</a>
       </li>
       <li>
         <a>Course Overview</a>
