--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ h2 {
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/models/chatRoom.js"></script>
   <script type="text/javascript" src="js/models/MessageModel.js"></script>
   <script type="text/javascript" src="js/models/UserModel.js"></script>
@@ -335,7 +336,7 @@ h2 {
 </div>
 </div>
 
-  <script src="js/index.js"></script>
+<script src="js/index.js"></script>
 
 
 </body>
