fix many bugs add flash for message

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@ h2 {
   <script type="text/javascript" src="javascripts/models/UserModel.js"></script>
   <script type="text/javascript" src="javascripts/collections/Conversation.js"></script>
   <script type="text/javascript" src="javascripts/collections/Users.js"></script>
+  <script type="text/javascript" src="javascripts/collections/chatRooms.js"></script>
   <script type="text/javascript" src="javascripts/views/ConversationView.js"></script>
   <script type="text/javascript" src="javascripts/views/MessageView.js"></script>
   <script type="text/javascript" src="javascripts/views/ToolBarUsersView.js"></script>
