--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@ h2 {
      <span
        class="g-signin"
        data-callback="signinCallback"
-       data-clientid="1027427116765-7114tc83a6it3cctema5av8oeuuc1a0n.apps.googleusercontent.com"
+       data-clientid="1027427116765-9c18ckuo07r5ms0aclbfjsmcpd3jrmtc.apps.googleusercontent.com"
        data-cookiepolicy="single_host_origin"
        data-theme='light'
-       data-scope="profile">
+       data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/devstorage.read_write">
      </span>
    </span>
    <!-- <div id="sign_out"></div> -->
